# oboro

./: .hgignore  .hgsub  .hgsubstate  CMakeLists.txt  Doxyfile.in  LICENSE-MIT  Makefile.am  Makefile.in  aclocal.m4  config.h.cmake  config.h.in  configure  configure.ac  oboro.pc.in
Modules/: CCxxFlags.cmake  OboroOptions.cmake
include/: CMakeLists.txt  Makefile.am
include/oboro/: CMakeLists.txt  begin.h  debug.h  declspec.h  function.hpp  initializer.hpp  module.hpp  oboro.hh  oboro.hpp
src/: CMakeLists.txt  Makefile.am  call.h  debug.h  oboro.cc
test/: CMakeLists.txt  Makefile.am  test00.cc  test01.cc
